[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://assets/fonts/DisplayLabelFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/PlayerInputFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/gfx/submit-button-normal.png" type="Texture" id=5]
[ext_resource path="res://assets/gfx/submit-button-pressed.png" type="Texture" id=6]

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 568.0
custom_constants/separation = 48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayLabel" type="Label" parent="Margin/VBox"]
margin_right = 960.0
margin_bottom = 415.0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 3 )
text = "Placeholder text"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Margin/VBox"]
margin_top = 463.0
margin_right = 960.0
margin_bottom = 536.0
custom_constants/separation = 24
alignment = 2

[node name="PlayerInput" type="LineEdit" parent="Margin/VBox/HBox"]
margin_right = 863.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitBtn" type="TextureButton" parent="Margin/VBox/HBox"]
margin_left = 887.0
margin_right = 960.0
margin_bottom = 73.0
rect_min_size = Vector2( 73, 73 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="Margin/VBox/HBox/PlayerInput" to="." method="_on_PlayerInput_text_entered"]
[connection signal="pressed" from="Margin/VBox/HBox/SubmitBtn" to="." method="_on_SubmitBtn_pressed"]
